Thu Feb 28 13:55:04 EDT 2013 (dar)
------------------------------------
 * libclamav/pe_icons.c: introduce LOGPARSEICONDETAILS define to reduce parseicon logging in default build

Wed Feb 20 10:05:00 EDT 2013 (multiple)
------------------------------------
 * Bug reported by Felix Groebert, Mateusz Jurczyk and Gynvael Coldwind of the
 Google Security Team

Tue Feb 5 19:38:35 EDT 2013 (dar)
------------------------------------
 * Add runtime enable/disable of SWF scanning

Mon Feb 4 16:32:50 2013 EDT 2013 (dar)
------------------------------------
 * bb #6712: safer SWF tag length handling

Mon Feb 4 15:54:44 EDT 2013 (swebb)
------------------------------------
 * bb5638 - Add new database file to sigtool

Fri Feb 1 17:05:53 EDT 2013 (dar)
------------------------------------
 * bb #6671: tweak asm register reference in tomsfastmath code for clang
 compatibility

Tue Jan 29 12:59:07 EDT 2013 (swebb)
------------------------------------
 * Add Shawn Webb and Steve Morgan to the AUTHORS file

Fri Jan 25 11:52:03 EDT 2013 (rpentney)
------------------------------------
 * Fixed signed division check as in BB#6482

Fri Jan 25 11:30:43 EDT 2013 (dar)
------------------------------------
 * libclamav: fix 7z tempdir ref

Thu Jan 24 14:43:58 EDT 2013 (dar)
------------------------------------
 * bb #6643: pdf dictionary fix

Tue Jan 15 15:42:31 EDT 2013 (dar)
------------------------------------
 * bb #5324: strip down Flash file handling, decompress compressed Flash files

Wed Jan 9 12:58:53 EDT 2013 (dar)
------------------------------------
 * bb #6534: SWF signature category

Tue Jan 8 15:10:03 EDT 2013 (swebb)
------------------------------------
 * Add dumpcerts command-line option for clamscan. Only show certs in the PE
 file, not certs loaded by the certs db.

Tue Jan 8 12:18:35 EDT 2013 (morgan)
------------------------------------
 * Fix for CL_ENULLARG reported in regression run of 0021468992.gz

Tue Jan 2 16:06:10 EDT 2013 (dar)